$Id: //main/2019/qhull/src/Changes.txt#78 $$Date: 2020/09/08 $

.............This file lists all changes to qhull and rbox.....................

====
== Contents
====

To do
Qhull 2018-2020
Qhull 2015
Qhull 2012.1
Qhull 2011.1
Qhull 2010.1 and 2009.1
Qhull 2003.1
Qhull 2002.1
Qhull 3.1 (2001)
Qhull 2.6 (1999)
Qhull 2.5 (1998)
Qhull 2.4 (1997)
Qhull 2.3 (1996)
Qhull 2.2 (1995-1996)
Qhull 2.1 (1995)
Qhull 2.0 (1994-1995)

====
== To do
====

- For a list of enhancement requests, see
  http://www.qhull.org/html/qh-code.htm#enhance
- The C++ interface needs documentation.
  Give C++ a try and make it better.
  http://github.com/qhull/qhull/wiki
- Expand the C++ interface for Voronoi diagrams
  Design for arbitrary dimension with non-simplicial facets
  Start with 'user_eg3 eg-voronoi eg-fifo'
  Compute the convex hull of each Voronoi region
  Compare its facet hyperplanes with eg-fifo
  Create a data structure for the Voronoi diagram
  Compare your result to CGAL's 2-d Voronoi diagram
  Two CGAL halfedges is equivalent to a Qhull ridge
  https://doc.cgal.org/4.7/Voronoi_diagram_2/group__PkgVoronoiDiagramAdaptor2.html

==================
== Qhull 2018-2020
==================

------------
Qhull GitHub

build/README-build.txt: Add deprecated targets

------------
Qhull 2020.2 2020/08/31 (8.0.2)

CMake builds
- CMakeLists.txt: Fixed /usr/local/lib/pkgconfig for debug builds
- CMakeLists.txt: Remove qhull_SHARED and qhull_SHAREDP from 'make all'
  Remove qhull_SHARED and qhull_SHAREDP from qhull_TARGETS_SHARED
  Use reentrant Qhull (libqhull_r) for user code
- CMakeLists.txt: If "MSYS Makefiles", change the default CMAKE_INSTALL_PREFIX to "/usr/local"
  Remove WIN32 conditionals from MAN_INSTALL_DIR and DOC_INSTALL_DIR
- CMakeLists.txt: Add 'uninstall' to delete the files listed in install_manifest.txt
- CMakeLists.txt: If LINK_APPS_SHARED, link qhull applications to libqhull_r.so [S. Bruens #69]