@@ -176,11 +176,10 @@ geometry programs and other combinatorial algorithms
         href="http://www.cs.mcgill.ca/~fukuda/soft/cdd_home/cdd.html">
         cdd</a> program for halfspace intersection and convex hulls (<a
         href="http://www.csb.ethz.ch/tools/polco">Polco/Java</a>)</li>
-        <li>Gartner's <a href="http://www.inf.ethz.ch/personal/gaertner/miniball.html">
+    <li>Gartner's <a href="http://www.inf.ethz.ch/personal/gaertner/miniball.html">
         Miniball</a> for fast and robust smallest enclosing balls (up to 20-d)
-
-        <li><a href=http://www.mathtools.net/>Mathtools.net</a> of scientific and engineering
-        software
+	<li>Gold's <a href="http://web.archive.org/web/20081018211137/http://www.voronoi.com/wiki/index.php?title=Voronoi_Applications">Voronoi applications</a> for spatial analysis (as of 2008)
+    <li><a href=http://www.mathtools.net/>Mathtools.net</a> of scientific and engineering software
     <li>Owen's <a href="http://www.imr.sandia.gov/papers/topics.html">International Meshing</a> Roundtable
     <li>Schneiders' <a
         href="http://www.robertschneiders.de/meshgeneration/meshgeneration.html">
@@ -188,7 +187,6 @@ geometry programs and other combinatorial algorithms
      <li>Shewchuk's <a href="http://www.cs.cmu.edu/~quake/triangle.html">triangle</a> program for 2-d Delaunay</li>
      <li>Teillaud's <a href="http://www.computational-geometry.org/">Computional Geometry Pages</a> for the Society of Computational Geometry and academic conferences.
         <li>Tomilov's <a href="https://github.com/tomilov/quickhull/blob/master/include/quickhull.hpp">quickhull.hpp</a> (<a href="http://habrahabr.ru/post/245221/">doc-ru</a>) implements the Quickhull algorithm for points in general position.
-        <li><a href=http://www.voronoi.com>Voronoi Web Site</a> for all things Voronoi
         <li>Young's <a href="http://homepage.usask.ca/~ijm451/finite/fe_resources/">Internet Finite Element Resources</a>
         <li>Zolotykh's <a href="http://www.uic.unn.ru/~zny/skeleton/">Skeleton</a> generates all extreme rays of a polyhedral cone using the Double Description Method</li>
 </ul>
