@@ -1,4 +1,4 @@
-$Id: //main/2019/qhull/src/Changes.txt#78 $$Date: 2020/09/08 $
+$Id: //main/2019/qhull/src/Changes.txt#80 $$Date: 2020/09/13 $
 
 .............This file lists all changes to qhull and rbox.....................
 
@@ -49,7 +49,12 @@ Qhull 2.0 (1994-1995)
 ------------
 Qhull GitHub
 
-build/README-build.txt: Add deprecated targets
+- build/README-build.txt: Add deprecated targets
+- html/qh-code.htm: Add suggestions on vertex merge and test for missing Qt5 dlls
+- html/qh-code.htm: Replaced '../src/' links with www.qhull.org/src
+- eg/qhull-zip.sh: Add notes on release process
+  For Unix build, add qhulltest/*.proj and README-build.txt
+- index.htm: Add archive link for Gold's voronoi.com
 
 ------------
 Qhull 2020.2 2020/08/31 (8.0.2)
